tests/paczka1/small_fuzzy/54794415.err
Error in line 2: 2Ct A948 86,4
Error in line 6: 2Ct S497 48,3
Error in line 8: 2Ct S890 29,7
Error in line 4: DyvXvFX S771 0,2
